tests/negative/test_tuple_diff_impl_cast.orb
fnc main () () {
    sym (x:(i32 i32) (tup 0:i8 0:i8));
};